<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_sign_up"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".Signup_Activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="#00FFFFFF"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:paddingRight="40dp"
            android:text="@string/sign_up_txt"
            android:textColor="#fff"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnnext"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:background="#00000000"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#fff"
            android:textSize="20sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="220dp"
        android:layout_height="220dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/upphoto"
        android:orientation="vertical">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp"
            android:background="@drawable/ic_photo" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/enter_your_information_and_take_the_photo_everything_is_shared_only_with_your_partner"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="19sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/btn_sign_up"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:padding="10dp"
            android:textColorHint="#bbb"
            android:textSize="22sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_sign_up"
            android:hint="@string/email"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="#bbb"
            android:textSize="22sp" />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_sign_up"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColorHint="#bbb"
            android:textSize="22sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnHelp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/help_dash"
            android:gravity="center_horizontal"
            android:hint="?"
            android:padding="5dp"
            android:textColorHint="#fff"
            android:textSize="22sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center_horizontal"
            android:text="@string/privacy_policy"
            android:textColor="#fff"
            android:textSize="22sp" />
    </RelativeLayout>
</LinearLayout>